<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUp">
    <TextView
        android:id="@+id/signup_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/cairobold"
        android:shadowColor="#3D955901"
        android:shadowDy="8"
        android:shadowRadius="5"
        android:text="@string/signup_tv_title"
        android:textColor="#FF9800"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/signup_linerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_tv_title">

    <ImageView
        android:id="@+id/singup_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic__menu_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signup_tv_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/cairobold"
            android:shadowColor="#3D955901"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:textColor="#FF9800"
            android:textSize="@dimen/_18ssp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_tf_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/signup_et_username"
            android:textColorHint="@color/black"
            app:boxStrokeColor="#FF9800"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:errorEnabled="true"
            app:hintTextColor="#FF9800"
            app:layout_constraintTop_toBottomOf="@id/signup_linerlayout"
            app:startIconDrawable="@drawable/ic_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/signup_tf_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/signup_et_phone"
            android:textColorHint="@color/black"
            app:boxStrokeColor="#FF9800"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:errorEnabled="true"
            app:hintTextColor="#FF9800"
            app:startIconDrawable="@drawable/ic_phone"
            app:layout_constraintTop_toBottomOf="@id/signup_tf_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/singup_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/signup_tf_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/signup_et_password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="#FF9800"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:errorEnabled="true"
            app:hintTextColor="#FF9800"
            app:layout_constraintTop_toBottomOf="@id/signup_tf_phone"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/signup_tf_city"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:hint="@string/signup_et_address"
            android:textColorHint="@color/black"
            app:boxStrokeColor="#FF9800"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:errorEnabled="true"
            app:hintTextColor="#FF9800"
            app:layout_constraintTop_toBottomOf="@id/signup_tf_password"
            app:startIconDrawable="@drawable/ic_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/Signup_btn_Signup"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/cairobold"
        android:gravity="center"
        android:padding="@dimen/_2sdp"
        android:shadowColor="#52955901"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/signup_btn_signup"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:backgroundTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_tf_city"/>


    <TextView
        android:id="@+id/signup_tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairoregular"
        android:shadowColor="#3DAF0303"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:text=" "
        android:textAlignment="center"
        android:textColor="#FF0303"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Signup_btn_Signup" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/signup_tv_result">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:fontFamily="@font/cairoregular"
            android:text="@string/signup_tv_haveacc"
            android:textColor="#454545"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/signup_tv_Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_4sdp"
            android:fontFamily="@font/cairobold"
            android:shadowColor="#3D955901"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:text="@string/signup_tv_login"
            android:textColor="#FF9800"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>