<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ForgetPassword">
    <TextView
        android:id="@+id/forget_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/cairobold"
        android:shadowColor="#3D955901"
        android:shadowDy="8"
        android:shadowRadius="5"
        android:text="@string/forget_tv_title"
        android:textColor="#FF9800"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/forget_linerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_tv_title">

        <ImageView
            android:id="@+id/forget_iv_logo"
            android:layout_width="@dimen/_128sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/ic__menu_logo" />

        <TextView
            android:id="@+id/forget_tv_appname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairobold"
            android:shadowColor="#3D955901"
            android:shadowDy="8"
            android:shadowRadius="5"
            android:text="@string/app_name"
            android:textColor="#FF9800"
            android:textSize="@dimen/_18ssp" />
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forget_tf_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:hint="@string/forget_et_username"
        android:textColorHint="@color/black"
        app:boxStrokeColor="#FF9800"
        app:boxStrokeWidth="@dimen/_2sdp"
        app:errorEnabled="true"
        app:hintTextColor="#FF9800"
        app:layout_constraintTop_toBottomOf="@id/forget_linerlayout"
        app:startIconDrawable="@drawable/ic_user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forget_et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forget_tf_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:hint="@string/forget_et_password"
        android:textColorHint="@color/black"
        app:boxStrokeColor="#FF9800"
        app:boxStrokeWidth="@dimen/_2sdp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:hintTextColor="#FF9800"
        app:layout_constraintTop_toBottomOf="@id/forget_tf_username"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forget_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forget_tf_conpassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:hint="@string/forget_et_conpassword"
        android:textColorHint="@color/black"
        app:boxStrokeColor="#FF9800"
        app:boxStrokeWidth="@dimen/_2sdp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:hintTextColor="#FF9800"
        app:layout_constraintTop_toBottomOf="@id/forget_tf_password"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forget_et_conpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/forget_btn_ok"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="@dimen/_96sdp"
        android:layout_height="@dimen/_48sdp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_12sdp"
        android:fontFamily="@font/cairobold"
        android:gravity="center"
        android:padding="@dimen/_2sdp"
        android:shadowColor="#52955901"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/forget_btn_ok"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:backgroundTint="#FF9800"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_tf_conpassword" />
    <TextView
        android:id="@+id/forget_tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cairoregular"
        android:shadowColor="#3DAF0303"
        android:shadowDy="4"
        android:shadowRadius="2"
        android:text=" "
        android:textAlignment="center"
        android:textColor="#FF0303"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_btn_ok" />
</androidx.constraintlayout.widget.ConstraintLayout>